[project]
name = "mkdocs-zettelkasten"
dynamic = ["version"]
description = "Add Zettelkasten features to MkDocs"
authors = [{ name = "Tomáš Bouška", email = "tomas@buvis.net" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "mkdocs (==1.6.1)",
  "jinja2 (==3.1.6)",
  "gitpython (==3.1.45)",
  "pymdown-extensions (==10.20)",
  "PyYAML (==6.0.3)",
  "tzlocal (==5.3.1)",
  "colorlog (==6.10.1)",
]

[project.entry-points."mkdocs.plugins"]
zettelkasten = "mkdocs_zettelkasten.plugin.plugin:ZettelkastenPlugin"

[project.entry-points."mkdocs.themes"]
zettelkasten-solarized-light = "mkdocs_zettelkasten.themes.solarized_light"

[build-system]
requires = ["poetry-core==2.1.3", "poetry-dynamic-versioning[plugin]==1.9.1"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry]
version = "0.0.0"

[tool.poetry.requires-plugins]
poetry-dynamic-versioning = { version = "==1.8.2", extras = ["plugin"] }

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.0"
debugpy = "^1.8.14"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"
bump = true
format-jinja = "{% if distance == 0 %}{{ base }}{% else %}{{ base }}.dev{{ distance }}{% endif %}"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "INP", "E501", "T201", "COM812"]
unfixable = ["B"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["S101"]
"**/test_*.py" = ["S101"]
