[project]
name = "mkdocs-zettelkasten"
dynamic = ["version"]
description = "Add Zettelkasten features to MkDocs"
authors = [{ name = "Tomáš Bouška", email = "tomas@buvis.net" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "mkdocs==1.6.1",
  "jinja2==3.1.6",
  "gitpython==3.1.46",
  "pymdown-extensions==10.21",
  "PyYAML==6.0.3",
  "tzlocal==5.3.1",
  "colorlog==6.10.1",
]

[project.entry-points."mkdocs.plugins"]
zettelkasten = "mkdocs_zettelkasten.plugin.plugin:ZettelkastenPlugin"

[project.entry-points."mkdocs.themes"]
zettelkasten = "mkdocs_zettelkasten.themes.zettelkasten"
zettelkasten-solarized-light = "mkdocs_zettelkasten.themes.zettelkasten"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mkdocs_zettelkasten"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
version_scheme = "python-simplified-semver"
local_scheme = "no-local-version"

[dependency-groups]
dev = [
  "pytest>=9,<10; python_version >= '3.10'",
  "pytest-playwright>=0.7,<1; python_version >= '3.10'",
  "debugpy>=1.8,<2",
  "ruff>=0.11,<1",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "INP", "E501", "T201", "COM812", "ANN", "FA102", "PLC0415", "TRY400", "PLR0913"]
unfixable = ["B"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["S101"]
"**/test_*.py" = ["S101", "ARG005", "PLR2004", "FBT", "SLF001", "S108"]
"tests/e2e/**/*.py" = ["S101", "ARG005", "PLR2004", "FBT", "SLF001", "S108", "S603", "S607"]
